森下くんの設定をちょっとパクった

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,23 @@
 {
-    "build": {
+	"build": {
 		"dockerfile": "Dockerfile",
-		"args": { 
-			"VARIANT": "3.10"
-		}
+		"context": "..",
+	},
+	"extensions": [
+		"ms-python.python",
+		"ms-python.vscode-pylance"
+	],
+	"settings": {
+		"editor.formatOnSave": true,
+		"editor.codeActionsOnSave": {
+			"source.organizeImports": true
+		},
+		"python.linting.enabled": true,
+		"python.linting.pylintEnabled": false,
+		"python.linting.flake8Enabled": true,
+		"python.linting.lintOnSave": true,
+		"python.linting.mypyEnabled": true,
+		"python.formatting.provider": "black",
+		"python.languageServer": "Pylance"
 	}
 }
