--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,3 @@
-ARG VARIANT=3
-FROM mcr.microsoft.com/vscode/devcontainers/python:${VARIANT}
+FROM mcr.microsoft.com/vscode/devcontainers/python:3.10-bullseye
 
 RUN python -m pip install --upgrade pip && python -m pip install poetry
